--- a/src/styles.css
+++ b/src/styles.css
@@ -40,8 +40,8 @@ h3 + p {
     better than setting vh
     */
 
-  height: 55vh;
-  /* min-height: 100%; */
+  /* height: 55vh; */
+  min-height: 100%;
   /* max-height: 100%; */
   grid-gap: 1px;
   /* this one would apply the height to those 
