--- a/src/index.css
+++ b/src/index.css
@@ -45,7 +45,7 @@ div::-webkit-scrollbar-thumb {
   /* height: 90%; */
   max-height: 100%;
 
-  overflow: hidden;
+  overflow: auto;
   background-color: white;
 }
 
