--- a/src/App.css
+++ b/src/App.css
@@ -3,7 +3,8 @@
   display: -ms-flexbox;
   display: flex;
   flex: 1;
+  padding: 5px;
   flex-direction: column;
-  overflow-y: auto;
-  /* background-color: #202C55; */
+  /* overflow-y: auto; */
+  background-color: white;
 }
