--- a/src/index.css
+++ b/src/index.css
@@ -40,10 +40,11 @@ div::-webkit-scrollbar-thumb {
   display: -ms-flexbox;
   display: flex;
   flex: 1;
-  padding: 5px;
+  /* padding: 5px; */
   flex-direction: column;
-  /* height: 90%; */
-  max-height: 100%;
+  /* height: 100%; */
+  height: auto;
+  /* max-height: 100%; */
 
   overflow: auto;
   background-color: white;
