--- a/src/styles.css
+++ b/src/styles.css
@@ -61,28 +61,37 @@ h3 + p {
 }
 
 .feature {
-  background-image: url(https://s3-us-west-2.amazonaws.com/s.cdpn.io/12005/hero-demo1.jpg);
+  
+  background-image: url(https://s3-us-west-2.amazonaws.com/s.cdpn.io/28963/ramp.jpg);
+  /* background-image: url(https://s3-us-west-2.amazonaws.com/s.cdpn.io/12005/hero-demo1.jpg); */
   /* background: #2c3e50; */
   background-position: bottom left;
   color: #fff;
 }
 
 .photos {
-  background-image: url(https://s3-us-west-2.amazonaws.com/s.cdpn.io/12005/hero-demo2.jpg);
+  
+  background-image: url(https://s3-us-west-2.amazonaws.com/s.cdpn.io/28963/spike.jpg);
+  /* background-image: url(https://s3-us-west-2.amazonaws.com/s.cdpn.io/12005/hero-demo2.jpg); */
   /* background: #7f8c8d; */
   color: #fff;
 }
 
 .news {
-  background-image: url(https://s3-us-west-2.amazonaws.com/s.cdpn.io/12005/hero-demo3.jpg);
+  
+  background-image: url(https://s3-us-west-2.amazonaws.com/s.cdpn.io/28963/gugg.jpg);
+  /* background-image: url(https://s3-us-west-2.amazonaws.com/s.cdpn.io/12005/hero-demo3.jpg); */
   /* background: #34495e; */
 
   color: #fff;
 }
 
 .special {
-  background-image: linear-gradient(rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.8)),
-    url(https://s3-us-west-2.amazonaws.com/s.cdpn.io/12005/hero-demo5.jpg);
+  
+  /* background-image: linear-gradient(rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.8)),
+    url(https://s3-us-west-2.amazonaws.com/s.cdpn.io/12005/hero-demo5.jpg); */
+    background-image: linear-gradient(rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.8)),
+    url(https://s3-us-west-2.amazonaws.com/s.cdpn.io/28963/gugg.jpg);
   /* background: #e74c3c; */
 
   color: #fff;
@@ -96,8 +105,11 @@ h3 + p {
 }
 
 .amazing {
+  
   background-image: linear-gradient(rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.9)),
-    url(https://s3-us-west-2.amazonaws.com/s.cdpn.io/12005/hero-demo4.jpg);
+    url(https://s3-us-west-2.amazonaws.com/s.cdpn.io/28963/window.jpg);
+  /* background-image: linear-gradient(rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.9)),
+    url(https://s3-us-west-2.amazonaws.com/s.cdpn.io/12005/hero-demo4.jpg); */
   /* background: #8e44ad; */
   color: #fff;
   display: flex;
